# ota-image-builder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json5
.github/workflows/: claude-code-review.yml  claude.yml  e2e_test.yml  lock_file_management.yml  release.yml  release_rsync_static.yml  unit_test.yml
docker/: Dockerfile  README.md
docker/builder_app/: Dockerfile
docker/builder_release/: Dockerfile  README.md
docker/e2e_test_base/: Dockerfile  README.md  e2e_test.sh
docker/rsync_static/: Dockerfile  README.md
docker/tar_static/: Dockerfile  README.md
src/ota_image_builder/: __main__.py  _common.py  _configs.py  _consts.py  _version.py  main.py
src/ota_image_builder/cmds/: __init__.py  _utils.py  add_image.py  add_otaclient_package.py  add_otaclient_package_compat.py  aws_kms_sign.py  build_annotation.py  build_exclude_cfg.py  finalize.py  init.py  pack_artifact.py  prepare_sysimg.py  sign.py
src/ota_image_builder/v1/: README.md  _image_config.py  _image_index.py  _image_manifest.py
src/ota_image_builder/v1/_resource_process/: __init__.py  _bundle_filter.py  _common.py  _compression_filter.py  _db_utils.py  _rootfs_process.py  _slice_filter.py
tests/certs/: gen_cert_chain.sh
tests/data/: add_image_annotations.yaml  full_annotations.yaml  init_annotations.yaml
tests/e2e/: README.md
tests/e2e/scripts/: compare_rootfs.py  confirm_docker_whiteout_files.sh  e2e_build_ota_image.sh  e2e_build_sys_img.sh  e2e_setup_sys_img.sh
tests/sample_build/: README.md
tests/scripts/: e2e_build_sys_img.sh  e2e_setup_sys_img.sh  gen_cert_chain.sh  gen_certs.sh
tests/unit/: conftest.py  test_common.py
tests/unit/cmds/: test_add_otaclient_package.py  test_add_otaclient_package_compat.py  test_aws_kms_sign.py  test_build_annotation.py  test_build_exclude_cfg.py  test_finalize.py  test_init.py  test_prepare_sysimg.py  test_sign.py  test_utils.py
tests/unit/v1/: test_bundle_filter.py  test_compression_filter.py  test_db_utils.py  test_image_config.py  test_image_index.py  test_rootfs_process.py  test_slice_filter.py
