[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-vcs",
    "hatchling>=1.20",
]

[project]
name = "ota-image-builder"
description = "OTA Image Builder."
dynamic = [
    "optional-dependencies",
    "version",
]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ota-image-libs@https://github.com/tier4/ota-image-libs/releases/download/v0.3.0/ota_image_libs-0.3.0-py3-none-any.whl#sha256:98a411c53a01f313ddfbfcb8c8d20dcd9ced829c7282a01763c81f25c695d79c",
    # via ota-image-libs, unfortunately github cannot see through indirect deps
    #   introduced via dep specified by wheel package.
    # based on ota-image-libs deps, add more restrictions to version range.
    "cryptography>=45.0.1,<47",
    "msgpack>=1.1,<2",
    "pydantic>=2.10,<3",
    "pyjwt>=2.9,<2.12",
    "pyyaml==6.0.3",
    "simple-sqlite3-orm~=0.12",
    "typing-extensions>=4.6.3",
    "zstandard>=0.22,<0.26",
]
urls.Source = "https://github.com/tier4/ota-image-builder"

[project.scripts]
ota-image-builder = "ota_image_builder.__main__:main"
ota-image-tools = "ota_image_tools.__main__:main"

[dependency-groups]
dev = [
    "coverage>=7,<8",
    "pre-commit>=3,<5",
    "pyinstaller~=6.15",
    "pytest>=8.3,<10",
    "pytest-mock~=3.14",
    "ruff",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/ota_image_builder/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "docs",
  ".github",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "src",
]
sources = [
  "src",
]

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".ruff_cache",
    ".venv",
    "venv",
    ".tests",
]
ignore = [
    "proto/**",
    "**/*_pb2.py*",
    "**/*_pb2_grpc.py*",
    "scripts",
]
typeCheckingMode = "standard"
pythonVersion = "3.13"

[tool.ruff]
line-length = 88
target-version = "py313"
# NOTE: not include tests and tools for now
include = [
    "tests/**/*.py",
    "src/**/*.py",
    "pyproject.toml",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",   # pyflakes
    "Q",   # flake8-quotes
    "I",   # isort
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "ICN", # flake8-import-conventions
]
ignore = [
    "E266", # (too many leading '#'): sometimes we use multiple # for separting sections
    "E203", # (white space before ':'): this error conflicts with black linting
    "E701", # (multiple statements on one line)
    "S101", # (use of assert): mostly we use assert for typing
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src/ota_image_builder"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
